[gd_scene load_steps=3 format=3 uid="uid://caldvoruskrky"]

[ext_resource type="Script" uid="uid://d14y70anvqktb" path="res://objects/scripts/cheese_spawner.gd" id="1_o8yy3"]
[ext_resource type="Texture2D" uid="uid://cd0eiypcnlnql" path="res://assets/objects/cheese_spawn.png" id="2_agykj"]

[node name="CheeseSpawner" type="Node2D"]
script = ExtResource("1_o8yy3")

[node name="FocusTransform" type="RemoteTransform2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CheeseOutline" type="Sprite2D" parent="."]
texture = ExtResource("2_agykj")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
